--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,34 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="15"
-    tools:context=".Fragment_Show_Meal">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="50dp"
         android:orientation="horizontal"
         android:weightSum="8">
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/img_exit"
             android:layout_width="50dp"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
             android:background="@android:color/transparent"
             android:contentDescription="exit"
             android:src="@drawable/x_symbol"
-            android:visibility="visible" />
+            tools:ignore="TouchTargetSizeCheck"
+            android:visibility="gone"/>
 
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="7dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="20dp"
             android:layout_weight="8"
-            app:cardCornerRadius="20dp">
+            app:cardCornerRadius="20dp"
+            app:cardBackgroundColor="#E5E7E9">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -61,16 +61,24 @@
                     android:background="@android:color/transparent"
                     android:contentDescription="clean"
                     android:src="@drawable/clear_icon"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     tools:ignore="TouchTargetSizeCheck" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/filter_6551"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:visibility="gone"/>
     </LinearLayout>
 
-
     <FrameLayout
+        android:id="@+id/frame_home"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="70dp"/>
 
 </LinearLayout>
