--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -6,7 +6,7 @@
     android:weightSum="5">
 
     <TextView
-        android:id="@+id/tx_ingredient"
+        android:id="@+id/tv_ingredient"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3.5"
@@ -18,7 +18,7 @@
         android:paddingBottom="10dp"/>
 
     <TextView
-        android:id="@+id/tx_amount"
+        android:id="@+id/tv_amount"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1.5"
