--- a/app/src/main/res/layout/item_tip_activity.xml
+++ b/app/src/main/res/layout/item_tip_activity.xml
@@ -2,16 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:weightSum="10">
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="2">
-        <ImageView
-            android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_weight="2"
+        android:layout_marginTop="10dp">
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/avt" />
+            app:cardCornerRadius="80dp"
+            android:layout_marginLeft="5dp">
+            <ImageView
+                android:id="@+id/im_avt_tip"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/avt" />
+
+        </androidx.cardview.widget.CardView>
+
     </LinearLayout>
 
     <LinearLayout
@@ -21,6 +32,7 @@
         android:layout_weight="6.5"
         android:weightSum="7">
         <TextView
+            android:id="@+id/tv_name_tip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Sample name"
@@ -32,6 +44,7 @@
             android:textSize="20dp"
             android:layout_weight="1"/>
         <TextView
+            android:id="@+id/tv_tip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="sample tip"
@@ -44,13 +57,18 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_weight="1.4"
-        android:layout_marginTop="45dp">
-        <ImageView
+        android:layout_marginTop="10dp">
+        <ToggleButton
+            android:id="@+id/tb_fav_tip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/android_favorite"
-            android:layout_gravity="center"/>
+            android:background="@drawable/toggle_selector"
+            android:onClick="onCustomToggleClick"
+            android:textOff=""
+            android:textOn=""
+            android:layout_alignParentEnd="true" />
         <TextView
+            android:id="@+id/tv_number_fav_tip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="1"
