--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,6 +24,7 @@
             android:visibility="gone"/>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/card_search"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
@@ -55,6 +56,7 @@
                     tools:ignore="TouchTargetSizeCheck" />
 
                 <ImageButton
+                    android:id="@+id/img_clear"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -65,20 +67,21 @@
                     tools:ignore="TouchTargetSizeCheck" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
-        <ImageView
+        <ImageButton
+            android:id="@+id/img_filter"
             android:layout_width="30dp"
             android:layout_height="match_parent"
             android:src="@drawable/filter_6551"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            android:background="@android:color/transparent"/>
     </LinearLayout>
 
     <FrameLayout
         android:id="@+id/frame_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="70dp"/>
+        android:layout_marginTop="10dp" />
 
 </LinearLayout>
