--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +16,8 @@
             android:text="#Category"
             android:textSize="30dp"
             android:textColor="@color/black"
-            android:paddingTop="5dp"/>
+            android:paddingTop="5dp"
+            android:layout_marginStart="10dp" />
 
         <TextView
             android:id="@+id/tv_see_all"
