--- a/app/src/main/res/layout/item_meal.xml
+++ b/app/src/main/res/layout/item_meal.xml
@@ -12,7 +12,7 @@
     >
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         app:cardCornerRadius="20dp">
         <ImageView
             android:id="@+id/img_meal"
@@ -20,7 +20,7 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:contentDescription="Image Dish"
-            android:src="@drawable/sample_dish" />
+            android:src="@drawable/preview" />
     </androidx.cardview.widget.CardView>
 
         <RelativeLayout
@@ -39,7 +39,7 @@
 
             <ToggleButton
                 android:id="@+id/toggle_fav"
-                android:layout_width="50dp"
+                android:layout_width="48dp"
                 android:layout_height="match_parent"
                 android:layout_toEndOf="@id/name_dish"
                 android:background="@drawable/toggle_selector"
