--- a/app/src/main/res/layout/item_dish.xml
+++ b/app/src/main/res/layout/item_dish.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:orientation="horizontal">
@@ -24,6 +25,17 @@
             android:padding="20dp"
             android:maxLines="1"
             android:ellipsize="end" />
+
+        <TextView
+            android:id="@+id/tx_dish2"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:layout_toEndOf="@id/img_dish"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:padding="20dp"
+            android:text="sample dish"
+            android:textSize="20dp" />
 
         <ImageView
             android:id="@+id/btn_remove"
