--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,6 +28,19 @@
         android:textSize="17dp"
         android:visibility="gone"/>
 
+    <TextView
+        android:id="@+id/forgot_password_fail"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/tv_login"
+        android:background="@drawable/lognin_fail"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:text="Need email in (Mail)"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:textSize="17dp"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/tx_enter_info"
@@ -87,13 +100,35 @@
         android:layout_height="50dp"
         android:layout_below="@+id/et_pwd"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="30dp"
         android:background="@drawable/background_button"
         android:gravity="center"
         android:text="Login"
         android:textSize="20dp"
         android:textStyle="bold" />
+
+    <LinearLayout
+        android:id="@+id/forgot_password"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/btn_login"
+        android:layout_alignStart="@+id/btn_login"
+        android:layout_alignEnd="@+id/btn_login"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="205dp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Forgot Password"
+            android:textColor="@color/black" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -132,6 +167,7 @@
             android:contentDescription="google"
             android:src="@drawable/google_icon" />
     </LinearLayout>
+
 
 
 </RelativeLayout>
